# PVZbyRust

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  README_EN.md  code_record.md  push.ps1
doc/: 课程报告.md
src/: components.rs  game.rs  grid.rs  level_controller.rs  lib.rs  main.rs  pea.rs  plant.rs  plugin.rs  resources.rs  shop.rs  states.rs  sun.rs  temp.rs  zombie.rs
src/core/: game.rs  mod.rs  renderer.rs  resources.rs  states.rs
src/entities/: mod.rs  pea.rs  sun.rs
src/mechanics/: collision.rs  entity_manager.rs  level_controller.rs  mod.rs
src/plants/: mod.rs  peashooter.rs  plant_factory.rs  plant_trait.rs  sunflower.rs  wallnut.rs
src/systems/: collision.rs  menu.rs  mod.rs  plant.rs  sun.rs  zombie.rs
src/ui/: grid.rs  input_handler.rs  mod.rs  shop.rs  shovel.rs
src/zombies/: conehead_zombie.rs  mod.rs  normal.rs  normal_zombie.rs  zombie_factory.rs  zombie_trait.rs
tests/: test_controllers.rs  test_core.rs  test_entities.rs  test_factories.rs  test_mechanics.rs  test_plants.rs  test_ui.rs  test_zombies.rs
